--- a/work10/index.html
+++ b/work10/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shuvon</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="local.css">
     <link rel="stylesheet" href="global.css">
@@ -86,9 +87,9 @@
                       <p>illustretions</p>
                       <h2 class="f-size-w">ureno lukas palao</h2>
                     </div>
-                    <div class="folio-hover">
+                    <!-- <div class="folio-hover">
                        <a href="#">View Project</a> 
-                    </div>
+                    </div> -->
                   </div>
                   <div class="folio-outer brown">
                     <img src="https://htmldemo.zcubethemes.com/shuvon/shuvon/assets/img/foilo-img5.png" alt="about-img">
@@ -96,9 +97,9 @@
                       <p>illustretions</p>
                       <h2 class="f-size-w">ureno lukas palao</h2>
                     </div>
-                    <div class="folio-hover">
+                    <!-- <div class="folio-hover">
                        <a href="#">View Project</a> 
-                    </div>
+                    </div> -->
                   </div>
                 </div>
                 <div class="col-md-6">
@@ -108,9 +109,9 @@
                       <p>illustretions</p>
                       <h2 class="f-size-w">ureno lukas palao</h2> 
                     </div>
-                      <div class="folio-hover"> 
+                      <!-- <div class="folio-hover"> 
                         <a href="#">View Project</a>
-                      </div>
+                      </div> -->
                   </div>
                   <div class="foilo-outer yellow"> 
                     <img src="https://htmldemo.zcubethemes.com/shuvon/shuvon/assets/img/foilo-img3.png" alt="about-img">
@@ -118,18 +119,18 @@
                       <p>illustretions</p>
                       <h2 class="f-size-w">ureno lukas palao</h2> 
                     </div>
-                    <div class="folio-hover"> 
+                    <!-- <div class="folio-hover"> 
                       <a href="#">View Project</a>
-                     </div>
+                     </div> -->
                   </div>
                   <div class="foilo-outer big"> <img src="https://htmldemo.zcubethemes.com/shuvon/shuvon/assets/img/foilo-img1.png" alt="about-img">
                     <div class="portfolio-text">
                       <p>illustretions</p>
                       <h2 class="f-size-w">ureno lukas palao</h2> 
                     </div>
-                    <div class="folio-hover">
+                    <!-- <div class="folio-hover">
                        <a href="#">View Project</a> 
-                      </div>
+                      </div> -->
                   </div>
                 </div>
               </div>
